kubernetes/applications/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: ntfy

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP

    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
